--- a/frontend/src/app/pages/user-signup/user-signup.component.scss
+++ b/frontend/src/app/pages/user-signup/user-signup.component.scss
@@ -10,7 +10,7 @@
     h1 {
         font-size: 24px;
         text-align: center;
-        margin-block: 1rem;
+        margin-block: 1rem 1.5em;
     }
 
     .signup-form {
