--- a/frontend/src/app/pages/user-signup/user-signup.component.scss
+++ b/frontend/src/app/pages/user-signup/user-signup.component.scss
@@ -8,7 +8,7 @@
     }
 
     h1 {
-        font-size: 24px;
+        font-size: 3em;
         text-align: center;
         margin-block: 1rem 1.5em;
     }
