--- a/frontend/src/app/pages/user-order/user-order.component.scss
+++ b/frontend/src/app/pages/user-order/user-order.component.scss
@@ -95,7 +95,7 @@ $_red: rgb(180, 0, 0);
 
         h1 {
             grid-row: 1;
-            margin-block-end: 0;
+            margin-block: 0;
             font-size: 32px;
             justify-self: self-end;
             font-family: fira-reg, Tahoma;
