--- a/frontend/src/app/pages/order-payment/order-payment.component.html
+++ b/frontend/src/app/pages/order-payment/order-payment.component.html
@@ -11,7 +11,7 @@
         <input formControlName="address" id="address" placeholder="Address" />
         <label>Phone</label>
         <input formControlName="phone" type="tel" id="phone" placeholder="Phone"/>
-        <button class="subscription-btn">Submit</button>
+        <button class="subscription-btn">Order</button>
     </form>
 </section>
 
