Edit structure of order payment component

--- a/frontend/src/app/pages/order-payment/order-payment.component.html
+++ b/frontend/src/app/pages/order-payment/order-payment.component.html
@@ -1,8 +1,8 @@
 <section class="order-payment grid">
-    <span class="back">Back to cart</span>
+    <span class="back" routerLink="order">Back to cart</span>
     <h1>Payment</h1>
-    <h2>Sum to pay: {{this.user.recentOrder!.sum}}</h2>
-    <form [formGroup]="paymentForm" (ngSubmit)="onCompletePayment()">
+    <h2>Sum to pay: <span>${{this.user.recentOrder!.sum}}</span></h2>
+    <form class="grid" [formGroup]="paymentForm" (ngSubmit)="onCompletePayment()">
         <label for="fullName">Full name</label>
         <input formControlName="fullName" id="fullName" placeholder="Full name"/>
         <label for="email">Email</label>
