--- a/frontend/src/app/pages/user-order/user-order.component.scss
+++ b/frontend/src/app/pages/user-order/user-order.component.scss
@@ -88,25 +88,28 @@ $_red: rgb(180, 0, 0);
     }
 
     .order-summary {
-        grid-template-rows: 1fr;
+        grid-auto-flow: row;
         align-content: center;
+        justify-content: center;
         gap: 1rem;
         margin-block: 64px;
 
         h1 {
-            grid-row: 1;
             margin-block: 0;
             font-size: 32px;
-            justify-self: self-end;
             font-family: fira-reg, Tahoma;
         }
 
+        .too-expensive {
+            font-family: fira-reg, Tahoma;
+            color: $_red;
+        }
+
         button {
-            grid-row: 1;
             @include buttons2;
-            justify-self: self-start;
             padding-block: 10px;
             padding-inline: 24px;
+            justify-self: center;
         }
     }
 }
