Edit structure of component

--- a/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.html
+++ b/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.html
@@ -3,5 +3,6 @@
         <img routerLink="/clothing-item/{{clothingItem._id}}" [src]="clothingItem.imgUrl || clothingItem.imgUrl[0]" [title]="clothingItem.name" />
         <h1>{{clothingItem.name}}</h1>
         <p>{{clothingItem.desc}}</p>
+        <p class="price">${{clothingItem.price}}</p>
     </article>
 </section>
