Add styling properties to component

--- a/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.scss
+++ b/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.scss
@@ -25,6 +25,11 @@
                 display: block;
                 cursor: pointer;
             }
+
+            .price {
+                font-family: fira-reg, Tahoma;
+                margin-block: .5em;
+            }
         }
     }
 }
