Add styling properties to app component

--- a/frontend/src/app/root-cmp/app.component.scss
+++ b/frontend/src/app/root-cmp/app.component.scss
@@ -1,6 +1,7 @@
 :host {
     display: grid;
     grid-template-columns: minmax(20px, 5%) 1fr minmax(20px, 5%);
+    height: 100vh;
 
     app-header {
         grid-column: 1 / -1;
