--- a/frontend/src/app/cmps/login-signup/login-signup.component.html
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.html
@@ -4,7 +4,7 @@
     <div class="user-login-signup grid" *ngIf="sectionClicked === 'user'">
         <button class="close-btn" (click)="onCloseModal()">x</button>
         <div class="logged-in-user grid" *ngIf="loggedInUser">
-            <h1>Hey {{loggedInUser.fullName}}! <br /> You have {{loggedInUser.coins}} coins.</h1>
+            <h1>Hey <span class="user-fullname" routerLink="/user" (click)="onCloseModal()">{{loggedInUser.fullName}}!</span> <br /> You have {{loggedInUser.coins}} coins.</h1>
             <button (click)="onLogout()">Logout</button>
         </div>
         <div class="login-info grid" *ngIf="!loggedInUser">
