Add styling properties to login signup component

--- a/frontend/src/app/cmps/login-signup/login-signup.component.scss
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.scss
@@ -120,6 +120,11 @@
             h1 {
                 margin-block-start: 8px;
             }
+
+            .user-fullname {
+                cursor: pointer;
+                font-family: fira-reg, Tahoma;
+            }
         }
     }
 }
