--- a/frontend/src/app/pages/user-details/user-details.component.html
+++ b/frontend/src/app/pages/user-details/user-details.component.html
@@ -1,8 +1,8 @@
 <section class="user-details">
     <form [formGroup]="userForm" *ngIf="isEditMode">
-        <label for="fullName">Fullname</label>
+        <label for="fullName">Full name</label>
         <input formControlName="fullName" placeholder="Your fullname" id="fullName" />
-        <label for="gender">Fullname</label>
+        <label for="gender">Gender</label>
         <select formControlName="gender">
             <option value="Male">Male</option>
             <option value="Female">Female</option>
@@ -18,29 +18,21 @@
             <input type="checkbox" id="subscription" formControlName="isSubscribed" />
         </div>
     </form>
+    <div class="user-details-locked" *ngIf="!isEditMode">
+        <label for="fullName">Full name</label>
+        <p>{{user.fullName}}</p>
+        <label for="gender">Gender</label>
+        <p>{{user.gender}}</p>
+        <label for="password">Password</label>
+        <input type="password" [value]="user.password" id="password" disabled />
+        <label for="email">Email</label>
+        <p>{{user.email}}</p>
+        <label for="isSubscribed">Are you subscribed to our newsletter?</label>
+        <input type="checkbox" [value]="user.isSubscribed" disabled />
+    </div>
     <section class="user-orders" *ngIf="user.orders.length">
         <order-preview *ngFor="let order of user.orders; trackBy: trackByFn" [order]="order"></order-preview>
     </section>
+    <button *ngIf="!isEditMode">Edit</button>
+    <button *ngIf="isEditMode">Save</button>
 </section>
-
-<!-- username: [''],
-gender: [''],
-password: [''],
-email: [''],
-isSubscribed: [false],
-orders: [[]]
-
-
-fullName: string,
-username: string,
-gender: string,
-isAdmin: boolean,
-password: string,
-_id: string,
-coins: number,
-wishlist: ClothingItem[],
-email: string,
-isSubscribed: boolean,
-favoriteStyles?: string[]
-orders: Order[]
-recentOrder?: Order -->
