Edit structure of order list component

--- a/frontend/src/app/cmps/order-list/order-list.component.html
+++ b/frontend/src/app/cmps/order-list/order-list.component.html
@@ -1,1 +1,3 @@
-<p>order-list works!</p>
+<section class="user-last-orders">
+    <order-preview *ngFor="let order of orders; trackBy: trackByFn"></order-preview>
+</section>
