Edit structure for styling properties of user details component

--- a/frontend/src/app/pages/user-details/user-details.component.html
+++ b/frontend/src/app/pages/user-details/user-details.component.html
@@ -1,5 +1,5 @@
-<section class="user-details">
-    <h1 class="grid center">My Profile</h1>
+<section class="user-details grid justify-center">
+    <h1>My Profile</h1>
     <form [formGroup]="userForm" *ngIf="isEditMode">
         <label for="fullName">Full name</label>
         <input formControlName="fullName" placeholder="Your fullname" id="fullName" />
