Edit styling of app header component

--- a/frontend/src/app/cmps/app-header/app-header.component.scss
+++ b/frontend/src/app/cmps/app-header/app-header.component.scss
@@ -9,7 +9,8 @@
             background-color: var(--primary-clr1);
             text-align: center;
             padding: .5rem;
-            font-size: .6em;
+            font-size: .8em;
+            font-family: fira-reg, Tahoma;
             opacity: 0.8;
         }
 
