Add styling properties to login signup component

--- a/frontend/src/app/cmps/login-signup/login-signup.component.scss
+++ b/frontend/src/app/cmps/login-signup/login-signup.component.scss
@@ -125,6 +125,10 @@
                 cursor: pointer;
                 font-family: fira-reg, Tahoma;
             }
+
+            .btns {
+                gap: .5em;
+            }
         }
     }
 }
