Add styling properties to clothing item details component

--- a/frontend/src/app/pages/clothing-item-details/clothing-item-details.component.scss
+++ b/frontend/src/app/pages/clothing-item-details/clothing-item-details.component.scss
@@ -18,7 +18,11 @@ $_red: rgb(180, 0, 0);
 
     h1 {
         font-size: 3em;
-        margin-block: 32px 20px;
+        margin-block: 32px 1rem;
+    }
+
+    .gender {
+        font-size: 2em;
     }
 
     .gender,
