Edit styling properties of home clothing item preview component

--- a/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.scss
+++ b/frontend/src/app/cmps/home-clothing-item-preview/home-clothing-item-preview.component.scss
@@ -11,9 +11,12 @@
             justify-items: center;
             max-width: 350px;
             gap: .3rem;
+
+            h1, .price {
+                font-size: 1.25em;
+            }
             
             h1 {
-                font-size: 1em;
                 font-family: fira-reg, Tahoma;
                 margin-block: .5em;
             }
