Edit text of app footer

--- a/frontend/src/app/cmps/app-footer/app-footer.component.html
+++ b/frontend/src/app/cmps/app-footer/app-footer.component.html
@@ -1,5 +1,5 @@
 <section class="footer">
     <pre class="footer-info grid center">
-        <span class="logo-in-footer">Manook</span><p>Created by Shoval S. , </p><span class="github-icon" alt="github icon, clickable"></span>
+        <span class="logo-in-footer">Manook</span><p>Created by Shoval S.</p><span class="github-icon" alt="github icon, clickable"></span>
     </pre>
 </section>
