Edit text of placeholder in app header input for filtering

--- a/frontend/src/app/cmps/app-header/app-header.component.html
+++ b/frontend/src/app/cmps/app-header/app-header.component.html
@@ -9,7 +9,7 @@
         </div>
         <form class="flex align-center">
             <input type="text" [(ngModel)]="filterBy.name" (ngModelChange)="onSetFilter($event)"
-                placeholder="What are we buying today?" name="term" />
+                placeholder="Search" name="term" />
             <button class="search-btn"></button>
         </form>
 
