--- a/frontend/src/assets/style/setup/_mixins.scss
+++ b/frontend/src/assets/style/setup/_mixins.scss
@@ -3,6 +3,7 @@
     border-bottom: 5px solid var(--primary-clr2);
     color: var(--text);
     cursor: pointer;
+    border-radius: 3px;
 
     &:hover {
         background-color: #f5f5f5;
@@ -24,7 +25,6 @@
     &:focus {
         outline: none;
         border-bottom: 5px solid var(--primary-clr2);
-
     }
 
     &::placeholder {
