Add media query to clothing item filter styling properties

--- a/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.scss
+++ b/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.scss
@@ -67,3 +67,19 @@
         }
     }
 }
+
+@media (max-width: 800px) {
+    .clothing-item-filter {
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        padding-block: .3rem;
+        gap: .3rem;
+    
+        .styles-selection {
+            grid-column: 1 / -1;
+            grid-row: 1;
+            grid-template-columns: repeat(2, 1fr);
+            gap: .2rem;
+        }
+    }
+}
