Edit styling properties of filter component

--- a/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.scss
+++ b/frontend/src/app/cmps/clothing-item-filter/clothing-item-filter.component.scss
@@ -57,7 +57,7 @@
 
             &::-webkit-slider-thumb {
                 -webkit-appearance: none;
-                background-color: purple;
+                background-color: var(--primary-clr2);
             }
         }
 
